force-app/main/default/objects/Opportunity/fields/ECL1__c.field-meta.xml
<CustomField>
    <fullName>ECL1__c</fullName>
    <formula>if(ECL__c = 0,Max_MAR__c/5,ECL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECL1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>