force-app/main/default/objects/Opportunity/fields/ECL__c.field-meta.xml
<CustomField>
    <fullName>ECL__c</fullName>
    <label>ECL</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>