force-app/main/default/objects/Opportunity/fields/ECL_Multiple__c.field-meta.xml
<CustomField>
    <fullName>ECL_Multiple__c</fullName>
    <formula>Amount/ECL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECL Multiple</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>