force-app/main/default/objects/Opportunity/fields/Endur_Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Endur_Deal_Number__c</fullName>
    <label>Endur Deal Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>