force-app/main/default/objects/Opportunity/fields/Estimate_for_Exisiting__c.field-meta.xml
<CustomField>
    <fullName>Estimate_for_Exisiting__c</fullName>
    <label>% Estimate for Exisiting</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>