force-app/main/default/objects/Opportunity/fields/Estimate_for_replacement__c.field-meta.xml
<CustomField>
    <fullName>Estimate_for_replacement__c</fullName>
    <label>% Estimate for Increamental</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>