force-app/main/default/objects/Opportunity/fields/EstMargin__c.field-meta.xml
<CustomField>
    <fullName>EstMargin__c</fullName>
    <description>amount FF desk made from trade</description>
    <label>Estimated Margin (usd)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>