force-app/main/default/objects/Opportunity/fields/Exchange_Rate_to_USD__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_to_USD__c</fullName>
    <defaultValue>1.0000000</defaultValue>
    <label>Exchange Rate to USD</label>
    <precision>14</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>