force-app/main/default/objects/Opportunity/fields/Execution_date_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Execution_date_Start_date__c</fullName>
    <formula>round(((Start_Date__c-Execution_Date__c)/30.5),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fixed price duration</inlineHelpText>
    <label>Execution date - Start date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>