force-app/main/default/objects/Opportunity/fields/Exisiting_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Exisiting_Replacement__c</fullName>
    <inlineHelpText>Is this volume exisiting or replacement of current volume?</inlineHelpText>
    <label>Exisiting/Incremental</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Exisiting</fullName>
            </value>
            <value>
                <fullName>Incremental</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>