force-app/main/default/objects/Opportunity/fields/Expected_C3_USD__c.field-meta.xml
<CustomField>
    <fullName>Expected_C3_USD__c</fullName>
    <formula>Volume__c * 420 * Margin_RM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected C3 USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>