force-app/main/default/objects/Opportunity/fields/Fixed_price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_price__c</fullName>
    <label>STASCO is fixed price</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>