force-app/main/default/objects/Opportunity/fields/Fixed_Price_Contracts_are_used_for__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Contracts_are_used_for__c</fullName>
    <label>Fixed Price Contracts are used for?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>controlling budgets</fullName>
            </value>
            <value>
                <fullName>securing supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>