force-app/main/default/objects/Opportunity/fields/FO_Volume__c.field-meta.xml
<CustomField>
    <fullName>FO_Volume__c</fullName>
    <label>FO Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>