force-app/main/default/objects/Opportunity/fields/ForEx__c.field-meta.xml
<CustomField>
    <fullName>ForEx__c</fullName>
    <formula>IF(ISPICKVAL(Currency__c,&quot;USD&quot;),1,Price_to_Customer__c / Currency_value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insert the FX value og the Currency vs US$  eg if $1 = GBP 2.00   ---- enter 2.00</inlineHelpText>
    <label>ForEx</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>