force-app/main/default/objects/Opportunity/fields/Gallons__c.field-meta.xml
<CustomField>
    <fullName>Gallons__c</fullName>
    <description>US field</description>
    <label>Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>