force-app/main/default/objects/Opportunity/fields/GO_Volume__c.field-meta.xml
<CustomField>
    <fullName>GO_Volume__c</fullName>
    <label>GO Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>