force-app/main/default/objects/Opportunity/fields/Gross__c.field-meta.xml
<CustomField>
    <fullName>Gross__c</fullName>
    <label>Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>