force-app/main/default/objects/Opportunity/fields/Gross_or_Nett_Billing__c.field-meta.xml
<CustomField>
    <fullName>Gross_or_Nett_Billing__c</fullName>
    <inlineHelpText>Use for temperature adjustment</inlineHelpText>
    <label>Gross or Net Billing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net Billing</fullName>
            </value>
            <value>
                <fullName>Gross Billing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>