force-app/main/default/objects/Opportunity/fields/H_M_L1__c.field-meta.xml
<CustomField>
    <fullName>H_M_L1__c</fullName>
    <formula>TEXT( H_M_L__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H/M/L1</label>
    <type>Text</type>
</CustomField>