force-app/main/default/objects/Opportunity/fields/H_M_L__c.field-meta.xml
<CustomField>
    <fullName>H_M_L__c</fullName>
    <inlineHelpText>What is the pricing basis used - the default is Mean (M)
If high use (H)
If low used (L)</inlineHelpText>
    <label>H/M/L</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mean</fullName>
                <default>true</default>
                <label>Mean</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>