force-app/main/default/objects/Opportunity/fields/Hedge_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Hedge_Settlement__c</fullName>
    <inlineHelpText>The hedge settlement at the end of the month with stasco</inlineHelpText>
    <label>Hedge Settlement</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>