force-app/main/default/objects/Opportunity/fields/If_lost_why__c.field-meta.xml
<CustomField>
    <fullName>If_lost_why__c</fullName>
    <description>Alternative Product</description>
    <label>If lost - why?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price of swap</fullName>
            </value>
            <value>
                <fullName>Price of option</fullName>
            </value>
            <value>
                <fullName>Price - other</fullName>
            </value>
            <value>
                <fullName>Credit margin</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Authority</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>Trader unavailable</fullName>
            </value>
            <value>
                <fullName>Supply avaalibility</fullName>
            </value>
            <value>
                <fullName>Supply costing</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>Systems not able to handle trade</fullName>
            </value>
            <value>
                <fullName>MOA</fullName>
            </value>
            <value>
                <fullName>Alternative Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>