force-app/main/default/objects/Opportunity/fields/Informed_Stasco_Trader__c.field-meta.xml
<CustomField>
    <fullName>Informed_Stasco_Trader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informed Stasco Trader</label>
    <type>Checkbox</type>
</CustomField>