force-app/main/default/objects/Opportunity/fields/Initial_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Initial_Opinion__c</fullName>
    <description>Date of receipt for first review</description>
    <label>Initial Opinion</label>
    <type>Date</type>
</CustomField>