force-app/main/default/objects/Opportunity/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <description>Trade type (Swap; Option; Collar etc.)</description>
    <label>Instrument</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Swap</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Costless Collar</fullName>
            </value>
            <value>
                <fullName>Basis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>