force-app/main/default/objects/Opportunity/fields/Intra_Plan_Cost__c.field-meta.xml
<CustomField>
    <fullName>Intra_Plan_Cost__c</fullName>
    <label>Intra Plane Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>