force-app/main/default/objects/Opportunity/fields/Invoice_price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_price__c</fullName>
    <description>Price to the b2b customer</description>
    <label>Invoice price</label>
    <length>20</length>
    <type>Text</type>
</CustomField>