force-app/main/default/objects/Opportunity/fields/Is_this_a_Structured_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Structured_Finance_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box for all deals that involve Structured Finance.</inlineHelpText>
    <label>Is this a Structured Finance Deal?</label>
    <type>Checkbox</type>
</CustomField>