force-app/main/default/objects/Opportunity/fields/Legal_advisor__c.field-meta.xml
<CustomField>
    <fullName>Legal_advisor__c</fullName>
    <description>Name of who provided legal opinion</description>
    <label>Legal advisor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>