force-app/main/default/objects/Opportunity/fields/Legal_opinion__c.field-meta.xml
<CustomField>
    <fullName>Legal_opinion__c</fullName>
    <description>Who provided the legal opinion?</description>
    <inlineHelpText>Who provided the legal opinion?</inlineHelpText>
    <label>Legal opinion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OpCo legal</fullName>
            </value>
            <value>
                <fullName>Outside firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>