force-app/main/default/objects/Opportunity/fields/Line_of_Business2__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business2__c</fullName>
    <inlineHelpText>Business trading?</inlineHelpText>
    <label>Line of Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Bitumen</fullName>
            </value>
            <value>
                <fullName>Commercial Fleet</fullName>
            </value>
            <value>
                <fullName>Commercial Fuels</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>