force-app/main/default/objects/Opportunity/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Bitumen</fullName>
            </value>
            <value>
                <fullName>Commercial Fleet</fullName>
            </value>
            <value>
                <fullName>Commercial Fuels</fullName>
            </value>
            <value>
                <fullName>Commercial Fuels - Marine</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Lubes</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Marine Lubricants</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Shell Marine Products</fullName>
            </value>
            <value>
                <fullName>TSP</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>