force-app/main/default/objects/Opportunity/fields/Live_to_Market_Trade__c.field-meta.xml
<CustomField>
    <fullName>Live_to_Market_Trade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live to Market Trade</label>
    <type>Checkbox</type>
</CustomField>