force-app/main/default/objects/Opportunity/fields/Lost_margin__c.field-meta.xml
<CustomField>
    <fullName>Lost_margin__c</fullName>
    <label>Lost margin - how close were we? $/MT</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>