force-app/main/default/objects/Opportunity/fields/M2M_For_Deal__c.field-meta.xml
<CustomField>
    <fullName>M2M_For_Deal__c</fullName>
    <label>M2M For Deal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>