force-app/main/default/objects/Opportunity/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <label>March</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>