force-app/main/default/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Margin per unit (same unit as volume)</description>
    <formula>Amount  /   Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin/mt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>