force-app/main/default/objects/Opportunity/fields/Margin_cpg__c.field-meta.xml
<CustomField>
    <fullName>Margin_cpg__c</fullName>
    <label>Margin cpg</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>