force-app/main/default/objects/Opportunity/fields/Margin_MT__c.field-meta.xml
<CustomField>
    <fullName>Margin_MT__c</fullName>
    <inlineHelpText>Enter the total C3 margin made in US$
If in liters or other units - calculate the US$/ Tonne value and input</inlineHelpText>
    <label>Margin $/t</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>