force-app/main/default/objects/Opportunity/fields/Margin_per_MT__c.field-meta.xml
<CustomField>
    <fullName>Margin_per_MT__c</fullName>
    <formula>Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin per MT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>