force-app/main/default/objects/Opportunity/fields/Margin_RM__c.field-meta.xml
<CustomField>
    <fullName>Margin_RM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>