force-app/main/default/objects/Opportunity/fields/Margin_Total__c.field-meta.xml
<CustomField>
    <fullName>Margin_Total__c</fullName>
    <formula>(Buy_Price__c-Sell_Price__c)*Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>