force-app/main/default/objects/Opportunity/fields/Margin_vs_30_MAR__c.field-meta.xml
<CustomField>
    <fullName>Margin_vs_30_MAR__c</fullName>
    <formula>Amount/(0.3*Max_MAR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin vs 30%MAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>