force-app/main/default/objects/Opportunity/fields/Margin_vs_ECL__c.field-meta.xml
<CustomField>
    <fullName>Margin_vs_ECL__c</fullName>
    <formula>Amount/ECL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin:ECL Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>