force-app/main/default/objects/Opportunity/fields/Marketer__c.field-meta.xml
<CustomField>
    <fullName>Marketer__c</fullName>
    <label>Marketer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Helen McGee</fullName>
            </value>
            <value>
                <fullName>Jennifer Weatherly</fullName>
            </value>
            <value>
                <fullName>Jill Broviak</fullName>
            </value>
            <value>
                <fullName>Mary Swanson Duggan</fullName>
            </value>
            <value>
                <fullName>Nicole Valentine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>