force-app/main/default/objects/Opportunity/fields/Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement__c</fullName>
    <description>WONA = World outside north America</description>
    <label>Master Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No - US</fullName>
            </value>
            <value>
                <fullName>No - WONA</fullName>
            </value>
            <value>
                <fullName>Yes - US</fullName>
            </value>
            <value>
                <fullName>Yes - WONA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>