force-app/main/default/objects/Opportunity/fields/Master_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Master Agreement been signed? or necessary approval been attached?</inlineHelpText>
    <label>Master Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>