force-app/main/default/objects/Opportunity/fields/Max_MAR__c.field-meta.xml
<CustomField>
    <fullName>Max_MAR__c</fullName>
    <description>Maximum MAR of trade calculated in DCS at time of execution</description>
    <label>Max MAR</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>