force-app/main/default/objects/Opportunity/fields/MIM__c.field-meta.xml
<CustomField>
    <fullName>MIM__c</fullName>
    <description>MIM confirmation to stasco</description>
    <label>MIM</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>