force-app/main/default/objects/Opportunity/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>MONTH(Execution_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month&amp;Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>