force-app/main/default/objects/Opportunity/fields/Monthly_ECL__c.field-meta.xml
<CustomField>
    <fullName>Monthly_ECL__c</fullName>
    <formula>Max_MAR__c/8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly ECL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>