force-app/main/default/objects/Opportunity/fields/Monthly_Maximum_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Maximum_Volume__c</fullName>
    <inlineHelpText>What is the maximum volume the customer will lift per month?</inlineHelpText>
    <label>Monthly Maximum Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>