force-app/main/default/objects/Opportunity/fields/New_Contract__c.field-meta.xml
<CustomField>
    <fullName>New_Contract__c</fullName>
    <description>New contract which will replace existing trading arrangement</description>
    <label>New Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISDA</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>