force-app/main/default/objects/Opportunity/fields/New_Existing_Business__c.field-meta.xml
<CustomField>
    <fullName>New_Existing_Business__c</fullName>
    <description>The business type of this Opportunity</description>
    <inlineHelpText>A contract extension = Existing customer/Renewal.</inlineHelpText>
    <label>New/Existing Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer - New Business</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Renewal</fullName>
            </value>
            <value>
                <fullName>Existing Customer - New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>