force-app/main/default/objects/Opportunity/fields/Nicole__c.field-meta.xml
<CustomField>
    <fullName>Nicole__c</fullName>
    <description>Nicole</description>
    <label>Comments 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>nicole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>