force-app/main/default/objects/Opportunity/fields/Nominal_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Credit_Value__c</fullName>
    <label>Nominal Credit Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>