force-app/main/default/objects/Opportunity/fields/non_USD_deal__c.field-meta.xml
<CustomField>
    <fullName>non_USD_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trades in currencies other than USD</description>
    <label>non USD deal?</label>
    <type>Checkbox</type>
</CustomField>