force-app/main/default/objects/Opportunity/fields/Notes_for_Physical__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Physical__c</fullName>
    <label>Notes for Physical</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>