force-app/main/default/objects/Opportunity/fields/Notes_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Notes_Restrictions__c</fullName>
    <label>Notes/Restrictions</label>
    <type>TextArea</type>
</CustomField>