force-app/main/default/objects/Opportunity/fields/Number_of_Deals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deals__c</fullName>
    <inlineHelpText>Number of deals</inlineHelpText>
    <label>Number of Deals</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>