force-app/main/default/objects/Opportunity/fields/Nymex__c.field-meta.xml
<CustomField>
    <fullName>Nymex__c</fullName>
    <label>Nymex</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>