force-app/main/default/objects/Opportunity/fields/Nymex_Price__c.field-meta.xml
<CustomField>
    <fullName>Nymex_Price__c</fullName>
    <label>Nymex fill ($)</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>