force-app/main/default/objects/Opportunity/fields/NYMEX_swap_reference_number__c.field-meta.xml
<CustomField>
    <fullName>NYMEX_swap_reference_number__c</fullName>
    <label>NYMEX contract month</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>