force-app/main/default/objects/Opportunity/fields/OCAT_confirm__c.field-meta.xml
<CustomField>
    <fullName>OCAT_confirm__c</fullName>
    <label>Notes_</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>