force-app/main/default/objects/Opportunity/fields/OCAT_per_MT__c.field-meta.xml
<CustomField>
    <fullName>OCAT_per_MT__c</fullName>
    <formula>OCAT_total__c  /  Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMAV per MT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>