force-app/main/default/objects/Opportunity/fields/OCAT_total__c.field-meta.xml
<CustomField>
    <fullName>OCAT_total__c</fullName>
    <description>value to other desks of this trade</description>
    <label>RMAV total value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>