force-app/main/default/objects/Opportunity/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <label>October</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>