force-app/main/default/objects/Opportunity/fields/OLE_Ref__c.field-meta.xml
<CustomField>
    <fullName>OLE_Ref__c</fullName>
    <description>Openlink trade reference</description>
    <label>OLE Ref</label>
    <length>25</length>
    <type>Text</type>
</CustomField>