force-app/main/default/objects/Opportunity/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <description>A copy of the Opportunity Currency as Salesforce does not display the standard field on the View Opportunity page</description>
    <formula>TEXT( Opportunity_Currency_HCDM__c)</formula>
    <label>Opportunity Currency</label>
    <type>Text</type>
</CustomField>